--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.10",
+    "embla-carousel-autoplay": "^8.0.2",
+    "embla-carousel-react": "^8.0.2",
     "framer-motion": "^11.0.28",
     "lucide-react": "^0.363.0",
     "next": "14.1.4",
