--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-to-print": "^2.15.1",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.9.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
